kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: chatmed
  labels:
    app: backend-app
spec:
  selector:
    app: backend-app
  ports:
    - name: backend
      port: 8082
      targetPort: 8082
      protocol: TCP
  type: ClusterIP
